--- a/QuickLookDemo/Base.lproj/Main.storyboard
+++ b/QuickLookDemo/Base.lproj/Main.storyboard
@@ -18,16 +18,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C3A-zX-Esq">
-                                <rect key="frame" x="83" y="205" width="185" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Display file from remote url"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C3A-zX-Esq">
+                                <rect key="frame" x="112.5" y="273.5" width="150" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="2SQ-wt-DWc"/>
+                                    <constraint firstAttribute="height" constant="40" id="C9N-TI-XJd"/>
+                                </constraints>
+                                <state key="normal" title="Display Local FIle">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
-                                    <action selector="displayFile:" destination="BYZ-38-t0r" eventType="touchUpInside" id="67G-FZ-8HN"/>
+                                    <action selector="displayLocalFile:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nHy-Gd-EXo"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ujv-hh-d7X">
+                                <rect key="frame" x="87.5" y="353.5" width="200" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="B3N-hK-UYo"/>
+                                    <constraint firstAttribute="width" constant="200" id="iat-ua-3ux"/>
+                                </constraints>
+                                <state key="normal" title="Display file from remote url">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="displayFileFromUrl:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mhK-vi-MRj"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="C3A-zX-Esq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AJO-WI-hRi"/>
+                            <constraint firstItem="Ujv-hh-d7X" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="40" id="Ixl-e8-67N"/>
+                            <constraint firstItem="Ujv-hh-d7X" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XLZ-wg-Sit"/>
+                            <constraint firstItem="C3A-zX-Esq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-40" id="aZR-Ng-c2u"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
